--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,7 +27,9 @@ jobs:
       - uses: actions/setup-node@v3
         with: 
           node-version: '14'
-      - run: npm install -g bats
+      - name: install bats
+        run: npm install -g bats
+      - name: check version bats.
       - run: bats -v
       # Runs a single command using the runners shell
       - name: Run a one-line script
